Clear result display on single negative number

Display should clear when input is a single number, this covers the
case when the number is negative.

BUG: 489041